--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="canonical" href="https://mpo-slot.docs.ddo.sfa.atos.net/"/>
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1"/>
     <link rel="preload" as="image" href="https://selaluhoki.b-cdn.net/mpocash/icon-hitam.png">
+    <meta name="google-site-verification" content="XgE3o67j-RENDSsexHtrOXnA_k3Ybds6gCD_uBunTTE" />
     <link rel="preload" as="image" href="https://selaluhoki.b-cdn.net/mpocash/logo-mpocash.webp">
     <link rel="preload" as="image" href="https://selaluhoki.b-cdn.net/mpocash/banner%20new%20member%20mpocash.webp">
     <script data-auto async src="https://cdn.ampproject.org/v0.mjs" type="module" crossorigin="anonymous"></script>
